force-app/main/default/objects/SWAT_Action__c/SWAT_Action__c.object-meta.xml
<CustomObject>
    <label>SWAT Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWAT Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>