force-app/main/default/objects/SWAT_Action__c/fields/Action_Response__c.field-meta.xml
<CustomField>
    <fullName>Action_Response__c</fullName>
    <label>Action Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>