force-app/main/default/objects/SWAT_Action__c/fields/Date_for_Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Next_Review__c</fullName>
    <label>Date for Next Review</label>
    <type>Date</type>
</CustomField>