force-app/main/default/objects/SWAT_Action__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>SWAT Actions</relationshipLabel>
    <relationshipName>SWAT_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>