force-app/main/default/objects/SWAT_Action__c/fields/SWAT_Framework__c.field-meta.xml
<CustomField>
    <fullName>SWAT_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SWAT Framework</label>
    <referenceTo>SWAT_Frameworks__c</referenceTo>
    <relationshipLabel>SWAT Actions</relationshipLabel>
    <relationshipName>SWAT_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>