force-app/main/default/objects/SWAT_Action__c/fields/SWAT_Team__c.field-meta.xml
<CustomField>
    <fullName>SWAT_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SWAT Team</label>
    <referenceTo>SWAT__c</referenceTo>
    <relationshipLabel>SWAT Actions</relationshipLabel>
    <relationshipName>SWAT_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>