force-app/main/default/objects/SWAT_Action__c/fields/Target_Date_for_Completion__c.field-meta.xml
<CustomField>
    <fullName>Target_Date_for_Completion__c</fullName>
    <label>Target Date for Completion</label>
    <type>Date</type>
</CustomField>